# StaffManagementSystem

StaffManagementSystem/: CMakeLists.txt
StaffManagementSystem/Header/: boss.h  employee.h  manager.h  worker.h  workerManager.h
StaffManagementSystem/Main/: StaffManagerSystem_Main.cpp
StaffManagementSystem/Source/: boss.cpp  employee.cpp  manager.cpp  workerManager.cpp
